--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,8 +5,8 @@ security:
 
     role_hierarchy:
         ROLE_PANEL:                                     ROLE_USER
-        ROLE_ADMIN:                                     [ROLE_ZAMOWIENIA_FALK, ROLE_DNI_SWIATECZNE, ROLE_OP_OPLACANIE, ROLE_ZAMOWIENIA_LSHOP_RECZNIE, ROLE_KOLORY, ROLE_ZMIANA_TERMINU_REALIZACJI, ROLE_DOSTAWY, ROLE_PRODUKCJA, ROLE_LOGISTYK, ROLE_KONTROLA_JAKOSCI, ROLE_KOORDYNATOR_JAKOSCI, ROLE_BOK, ROLE_AKCEPTACJA,ROLE_OP_AKCEPTACJA,ROLE_OG_AKCEPTACJA,ROLE_MAGAZYN_KIEROWNIK,ROLE_KONSULTANT_LSHOP,ROLE_ZAMOWIENIA,ROLE_KIEROWNIK_LSHOP,ROLE_KLIENCI,ROLE_LOGI,ROLE_KODY_RABATOWE,ROLE_DOKUMENTY,ROLE_STATYSTYKI, ROLE_OG_ADMIN, ROLE_KIEROWNIK_BOK]
-        ROLE_SUPER_ADMIN:                               [ROLE_ZAMOWIENIE_WEWNETRZNE, ROLE_ZAMOWIENIE_EDYCJA_4EVER, ROLE_UZYTKOWNICY, ROLE_ADMIN]
+        ROLE_ADMIN:                                     [ROLE_USER, ROLE_PANEL, ROLE_ZAMOWIENIA_FALK, ROLE_DNI_SWIATECZNE, ROLE_OP_OPLACANIE, ROLE_ZAMOWIENIA_LSHOP_RECZNIE, ROLE_KOLORY, ROLE_ZMIANA_TERMINU_REALIZACJI, ROLE_DOSTAWY, ROLE_PRODUKCJA, ROLE_LOGISTYK, ROLE_KONTROLA_JAKOSCI, ROLE_KOORDYNATOR_JAKOSCI, ROLE_BOK, ROLE_AKCEPTACJA,ROLE_OP_AKCEPTACJA,ROLE_OG_AKCEPTACJA,ROLE_MAGAZYN_KIEROWNIK,ROLE_KONSULTANT_LSHOP,ROLE_ZAMOWIENIA,ROLE_KIEROWNIK_LSHOP,ROLE_KLIENCI,ROLE_LOGI,ROLE_KODY_RABATOWE,ROLE_DOKUMENTY,ROLE_STATYSTYKI, ROLE_OG_ADMIN, ROLE_KIEROWNIK_BOK]
+        ROLE_SUPER_ADMIN:                               [ROLE_PANEL, ROLE_USER, ROLE_ZAMOWIENIE_WEWNETRZNE, ROLE_ZAMOWIENIE_EDYCJA_4EVER, ROLE_UZYTKOWNICY, ROLE_ADMIN]
 
     providers:
         fos_userbundle:
