--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,6 +6,9 @@ fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
     prefix:   /panel
 
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
+
 ### Logowania
 #app_switch_user:
 #    path: /switch/user
